--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://adisingh841207:<adisingh>@cluster0.osrqxdh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://adisingh841207:<adisingh>@cluster0.osrqxdh.mongodb.net/
