--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://adisingh841207:<3yddNCIoe8iGcz4o>@cluster0.osrqxdh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://adisingh841207:%3C3yddNCIoe8iGcz4o%3E@cluster0.osrqxdh.mongodb.net/Techspire?retryWrites=true&w=majority&appName=Cluster0
