--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "postinstall": "mkdir -p uploads",
     "dev": "nodemon server.js"
   },
   "type": "module",
